--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!D
+<!DOCTYPE html>
+<html lang ="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Curso da Alura</title>
+    </head>
+    <body>
+        <ul>
+            <li>Vafrant</li>
+            <li>Docker</li>
+            <li>Ansible</li>
+            <li>Integração Continua</li>
+        </ul>
+    </body>
+</html>
